# DUX

./: .gitignore  .npmignore  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TODO.md  TODO_COURSE_GENERATOR_AGENT.md  USAGE.md  docker-compose.yml  package.json  vite.config.ts
backend/: .env.example  Dockerfile  Makefile  pyproject.toml
backend/app/: config.py  main.py  state.py
backend/app/agents/: llm.py
backend/app/agents/graphs/: course_planner.py  lesson_writer.py  orchestrator.py  quiz_generator.py  tutor.py
backend/app/agents/prompts/: output_schemas.py  prompts.md  system_prompts.py
backend/app/agents/tools/: assessment_tools.py  content_tools.py  curriculum_tools.py
backend/app/api/routes/: config.py  courses.py  health.py
backend/app/eval/: metrics.py  runner.py
backend/app/mcp/: client.py
backend/app/mcp/servers/: curriculum.py  research.py
backend/app/models/: agent.py  api.py  course.py
backend/app/services/: content_parser.py  course_service.py
backend/courses/: e2a280fe-56c5-44a3-b561-107c3044be7b.json  e9fdeb6d-5d8a-4279-9c7b-e0f407dd0eb4.json  ea41b964-a262-4447-99ac-62c86408c91a.json
backend/tests/: conftest.py
backend/tests/eval/: test_lesson_eval.py  test_outline_eval.py  test_quiz_eval.py  test_tutor_eval.py
backend/tests/integration/: test_api_routes.py  test_course_planner_graph.py  test_lesson_writer_graph.py  test_mcp_servers.py  test_orchestrator.py  test_quiz_generator_graph.py  test_tutor_graph.py
backend/tests/unit/: test_config.py  test_models.py  test_prompts.py  test_tools.py
frontend/: Dockerfile  (+3 more)
(+58 files in other folders)
